<resources>
    <string name="app_name">TinyStore</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="ingresar_nombre_producto">Ingresar nombre producto</string>
    <string name="detalle_del_producto">Detalle del Producto: </string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="label_nombre_producto">Nombre Producto</string>
    <string name="tv_label_price">Precio</string>
    <string name="description">Descripcion</string>
    <string name="back">Regresar</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="photo_url">Photo Url</string>
    <string name="register">Registrarse</string>
    <string name="password">Clave</string>
    <string name="ej_ejemplo_correo">Ej: ejemplo@correo.com</string>
    <string name="ej_john_doe">Ej: John Doe</string>
    <string name="products">Productos</string>
    <string name="document">Documento</string>
    <string name="create_product">Crear Producto</string>
    <string name="product_price">Precio del producto</string>
    <string name="save">Guardar</string>
    <string name="product_barcode_number">Codigo producto</string>
    <string name="bar_code">Codigo de barras</string>
    <string name="update">Actualizar</string>
    <string name="update_product">Actualizar Producto</string>
    <string name="purchase_products">Registradora</string>
    <string name="add">Agregar</string>
    <string name="user_identification">Documento usuario</string>
    <string name="start_purchase">Iniciar Compra</string>
    <string name="scan_product">Scan Producto</string>
    <string name="quantity">Cantidad: </string>
</resources>