<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="clickHandlers"
            type="co.edu.unab.mgads.tinystore.view.RegisterUserActivity.ClickHandlers" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="co.edu.unab.mgads.tinystore.view.RegisterUserActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/register"
            android:layout_marginTop="50dp"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_label_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/nombre"
            />
        <EditText
            android:id="@+id/tv_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/colorAccent"
            android:hint="@string/ej_john_doe"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_name"
            />
        <TextView
            android:id="@+id/tv_label_nombre"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/email"
            />
        <EditText
            android:id="@+id/tv_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/ej_ejemplo_correo"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_nombre"
            android:textColorHighlight="@color/colorAccent"
            />
        <TextView
            android:id="@+id/tv_label_url_photo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/photo_url"
            />
        <EditText
            android:id="@+id/tv_url_photo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Ej: www.image.co/image.png"
            android:inputType="textUri"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_url_photo"
            android:textColorHighlight="@color/colorAccent"
            />
        <TextView
            android:id="@+id/tv_label_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_url_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/password"
            />
        <EditText
            android:id="@+id/tv_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_password"
            android:textColorHighlight="@color/colorAccent"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/register"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_round_background"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{clickHandlers::registerClick}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{clickHandlers::backClickButton}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>