<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="title"
            type="String" />
        <variable
            name="clickHandlers"
            type="co.edu.unab.mgads.tinystore.view.ProductDetailActivity.ClickHandlers" />

        <variable
            name="product"
            type="co.edu.unab.mgads.tinystore.model.Product" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.unab.mgads.tinystore.view.ProductDetailActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalle_del_producto"
        android:textSize="25sp"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:srcCompat="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/tv_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nombre_producto"
        android:textSize="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{product.name}"
        android:textSize="16dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_name" />
    <View
        android:id="@+id/ln_name"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e5e5e5"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:id="@+id/tv_label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_label_price"
        android:textSize="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ln_name" />
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{product.priceString}"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_price"
        />
    <View
        android:id="@+id/ln_price"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e5e5e5"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"/>
    <TextView
        android:id="@+id/tv_barcode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_code"
        android:textSize="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ln_price" />
    <TextView
        android:id="@+id/tb_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{product.barcode}"
        android:textSize="16dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_barcode_label" />
    <View
        android:id="@+id/ln_barcode"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e5e5e5"
        app:layout_constraintTop_toBottomOf="@id/tb_barcode"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:id="@+id/tv_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln_barcode" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{product.image}"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_description" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e5e5e5"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:text="@string/eliminar"
        android:background="@drawable/btn_round_background"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintStart_toEndOf="@id/btn_edit"
        android:onClick="@{clickHandlers::deleteClickButton}"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="50dp"
        android:text="@string/editar"
        android:background="@drawable/btn_round_background"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        android:onClick="@{clickHandlers::editClickButton}"
        />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/back"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="@{clickHandlers::backClickButton}"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>