<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
 <data>
     <variable
         name="clickHandlers"
         type="co.edu.unab.mgads.tinystore.view.HomeActivity.ClickHandlers" />
 </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="co.edu.unab.mgads.tinystore.view.HomeActivity">

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_background"
            android:text="@string/register"
            android:textColor="@color/colorTextPrimary"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="170dp"
            android:onClick="@{clickHandlers::registerClickButton}"
            />

        <Button
            android:id="@+id/bt_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_background"
            android:text="@string/products"
            android:textColor="@color/colorTextPrimary"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/bt_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:onClick="@{clickHandlers::productsClickButton}"
            />

        <Button
            android:id="@+id/bt_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_background"
            android:text="@string/purchase_products"
            android:textColor="@color/colorTextPrimary"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/bt_products"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:onClick="@{clickHandlers::purchaseClickButton}"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
